@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.4 2004/10/15 16:50:50 dun Exp $
+## $Id: Makefile.am,v 1.5 2004/12/02 03:43:23 dun Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -7,12 +7,13 @@
 include $(top_srcdir)/config/Make-inc.mk
 
 install-data-local:
-	@for d in $(sysconfdir)/init.d $(sysconfdir)/rc.d/init.d; do \
-	  if test -d "$$d"; then \
-	    echo $(INSTALL) -m 755 -d $(DESTDIR)$$d; \
-	    $(INSTALL) -m 755 -d $(DESTDIR)$$d; \
-	    echo $(INSTALL) -m 755 munge.init $(DESTDIR)$$d/munge; \
-	    $(INSTALL) -m 755 munge.init $(DESTDIR)$$d/munge; \
-	    break; \
-	  fi; \
-	done
+	if test -d "$(sysconfdir)/init.d"; then \
+	  $(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
+	  $(INSTALL) -m 755 $(srcdir)/munge.init \
+	    "$(DESTDIR)$(sysconfdir)/init.d/munge"; \
+	fi
+	if test -d "$(sysconfdir)/sysconfig"; then \
+	  $(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/sysconfig"; \
+	  $(INSTALL) -m 755 $(srcdir)/munge.sysconfig \
+	    "$(DESTDIR)$(sysconfdir)/sysconfig/munge"; \
+	fi
